# cv_101

./: .gitignore  README.md  main.py  pyproject.toml
configs/: __init__.py  cifar10.yaml  config_models.py  imagenet.yaml  imagenette.yaml  mnist.yaml  nuimages_obj_det.yaml  oxford.yaml  voc_seg.yaml
datamodules/: __init__.py  ade20k.py  cifar10.py  imagenet.py  imagenette.py  mnist.py  nuimages.py  oxfordiit.py  pascalvoc.py  voc_segmentation.py
models/: __init__.py  basic_cnn.py  basic_nn.py  basic_seg.py  bisenet_v2.py  cifar_resnet.py  convnext.py  lenet.py  model.py  resnet.py  segnet.py  vgg16.py  vit_5.py
task/: __init__.py  classification.py  detection.py  segmentation.py
utils/: __init__.py  conv_utils.py  get_dataset.py  model_card.py  vit_utils.py
