[project]
name = "semantic-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "nuscenes-devkit>=1.1.11",
    "safetensors>=0.5.3",
    "tensorboard>=2.19.0",
    "timm>=1.0.16",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.9",
]
